Stop appearance of thumbnail jump on hover
Resolve #215.

--- a/woocommerce.css
+++ b/woocommerce.css
@@ -522,7 +522,8 @@ p.demo_store {
 .woocommerce.single-product #content div.product .images .flex-control-nav {
   margin-top: 10px; }
   .woocommerce.single-product #content div.product .images .flex-control-nav li img {
-    padding: 10px; }
+    padding: 10px;
+    -webkit-backface-visibility: hidden; }
 
 .woocommerce.single-product #content div.product .woocommerce-tabs .wc-tabs {
   margin-bottom: 30px;
